# Game-C-mushroom-picker

./: CMakeLists.txt  README.md  gamescreen.cpp  gamescreen.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mushroom.cpp  mushroom.h  records.cpp  records.h  recordsmanager.cpp  recordsmanager.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  simplemediaplayer.cpp  simplemediaplayer.h  styledialog.cpp  styledialog.h
